Fix Roles
* Add new entity
* Refactor code